[tool.poetry]
name = "python-project"
version = "0.1.0"
description = "Template for Python projects"
authors = ["Tien Vo <tvo.work@proton.me>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "pyproject", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.black]
line-length = 79
target-versions = ["py312"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
